.provarCaches/00D410000011HE0EAM/objects/rstk__invselect__c.object
<CustomObject>
    <description>invselect__c</description>
    <fields>
        <fullName>rstk__div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ_Inventory Selection</relationshipLabel>
        <relationshipName>invselect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fromheight__c</fullName>
        <label>From Height</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fromlength__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Length</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fromthickness__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Thickness</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fromweight__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fromwidth__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Width</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ_Inventory Selection</relationshipLabel>
        <relationshipName>ZZ_Inventory_Selection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locnum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location Number</label>
        <referenceTo>rstk__sylocnum__c</referenceTo>
        <relationshipLabel>ZZ_Inventory Selection</relationshipLabel>
        <relationshipName>ZZ_Inventory_Selection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locnumtext__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__lotnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__purchasedonly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchased Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__selectedlist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selected Inventory</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__toheight__c</fullName>
        <label>To Height</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__tolength__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Length</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__tothickness__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Thickness</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__toweight__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__towidth__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Width</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>ZZ_Inventory Selection</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ_Inventory Selection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>